--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -28,6 +28,8 @@
     "@angular/router": "~7.0.0",
     "@types/angularfire": "^0.8.33",
     "core-js": "^2.5.4",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
     "firebase": "^5.5.8",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.3.3",
